<resources>
    <string name="app_name">Clicker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="securityQuestion">Security Question</string>
    <string name="full_question">Where were you born?</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="reset">Reset</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="changePassword">Change Password</string>
    <string name="title_activity_sign_up">SignUp</string>

    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="studentId">Student Id</string>
    <string name="unity">Unity Id</string>
    <string name="securityAnswer">Security Answer</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_course_page">CoursePage</string>

    <string name="selectCourse">Select Course</string>
    <string name="next">Next</string>
    <string name="title_activity_questions">Questions</string>
    <string name="title_activity_grades">Grades</string>
    <string name="title_activity_results">Results</string>
    <string name="answer">Please enter your answer    </string>

    <string name="score">Your Score   </string>
    <string name="title_activity_security_question">SecurityQuestion</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="title_activity_no_tests">NoTests</string>
    <string name="title_activity_activity_questions_true_false">activity_questions_trueFalse </string>
    <string name="title_activity_no_questions">NoQuestions</string>


    <string name="noQuestions">Sorry the professor have not activated any questions currently!!</string>
    <string name="title_activity_connect">Connect</string>


</resources>
