<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg1"
    android:id="@+id/background"
    tools:context=".Login">



    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="35dp">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:text="@string/login"
                android:layout_span="2"
                android:layout_margin="15dp"
                android:textSize="20sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/txtOne"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:hint="Enter Username"
                android:singleLine ="true"
                android:maxLines="1"
                bootstrap:be_roundedCorners="true"
                bootstrap:be_state="success" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/txttwo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:password="true"
                android:hint="Enter Password"
                android:singleLine ="true"
                android:maxLines="1"
                bootstrap:be_roundedCorners="true"
                bootstrap:be_state="success" />

        </TableRow>

        <TableRow>

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/submit"
                android:layout_margin="5dp"
                android:text="@string/login"
                android:layout_span = "2"
                bootstrap:bb_icon_right="fa-android"
                bootstrap:bb_roundedCorners="true"
                bootstrap:bb_type="success" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/forgot_password"
                android:textSize="20sp"
                android:id="@+id/forgot"
                android:textColor="#FFFFFF"
                android:layout_span = "2"
                android:gravity="center"
                />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register"
                android:text="@string/register"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:textColor="#FFFFFF"
                android:layout_span = "2"
                android:gravity="center"/>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:id="@+id/connect"
                android:text="Connect to Server"
                android:layout_span="2"
                android:layout_margin="15dp"
                android:textSize="20sp" />

        </TableRow>


    </TableLayout>

</RelativeLayout>
