<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg1"
    tools:context="com.example.vamsivikash.clicker.SignUp">

    <!-- ALL ID's WILL BE ENDING WITH 1 TO DIFFERENTIATE IT FROM OTHER VARIABLES IN DIFFERENT PAGES -->

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstName"
                android:textColor="#FFFFFF"
                android:layout_margin="3dp"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/firstName1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:hint="Your First Name"
                android:singleLine ="true"
                android:maxLines="1"
                bootstrap:be_roundedCorners="true"
                bootstrap:be_state="success" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastName"
                android:textColor="#FFFFFF"
                android:layout_margin="3dp"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/lastName1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:hint="Your Last Name"
                android:singleLine ="true"
                android:maxLines="1"
                bootstrap:be_roundedCorners="true"
                bootstrap:be_state="success" />
        </TableRow>

        <TableRow> <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unity"
            android:textColor="#FFFFFF"
            android:layout_margin="3dp"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/unity1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:hint="Your Username"
                android:singleLine ="true"
                android:maxLines="1"
                bootstrap:be_roundedCorners="true"
                bootstrap:be_state="success" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#FFFFFF"
                android:layout_margin="3dp"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/password1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:hint="Your Password"
                android:password="true"
                android:singleLine ="true"
                android:maxLines="1"
                bootstrap:be_roundedCorners="true"
                bootstrap:be_state="success" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Re-type Password"
                android:textColor="#FFFFFF"
                android:layout_margin="3dp"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/confirmPassword1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:hint="Re-type Password"
                android:singleLine ="true"
                android:password="true"
                android:maxLines="1"
                bootstrap:be_roundedCorners="true"
                bootstrap:be_state="success" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/studentId"
                android:textColor="#FFFFFF"
                android:layout_margin="3dp"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/studentId1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:hint="Your Student Id"
                android:inputType="number"
                android:maxLength="9"
                android:singleLine ="true"
                android:maxLines="1"
                bootstrap:be_roundedCorners="true"
                bootstrap:be_state="success" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/securityQuestion"
                android:textColor="#FFFFFF"
                android:layout_margin="3dp"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/securityQuestion1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:hint="Your Secret Question"
                android:singleLine ="true"
                android:maxLines="1"
                bootstrap:be_roundedCorners="true"
                bootstrap:be_state="success" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/securityAnswer"
                android:textColor="#FFFFFF"
                android:layout_margin="3dp"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/securityAnswer1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:hint="Your Secret Answer"
                android:singleLine ="true"
                android:maxLines="1"
                bootstrap:be_roundedCorners="true"
                bootstrap:be_state="success" />
        </TableRow>

        <TableRow>

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register1"
                android:layout_margin="3dp"
                android:text="Go Wolfpack"
                android:layout_span = "2"
                bootstrap:bb_icon_right="fa-android"
                bootstrap:bb_roundedCorners="true"
                bootstrap:bb_type="success" />

        </TableRow>

    </TableLayout>
`
</RelativeLayout>
